--- a/outline.tex
+++ b/outline.tex
@@ -2,12 +2,15 @@
 
 \usepackage{graphicx}
 \usepackage{natbib}
+\usepackage{url}
+\usepackage{soul,color,xspace}
+\newcommand{\jyy}[1]{\sethlcolor{yellow}\hl{jyy:#1}\xspace}
 
 \setlength{\columnsep}{1cm}
 
 \begin{document}
 
-\title{What Makes A Complete Answer?: A Study on Revision Histories of Stack Overflow Posts.} 
+\title{What Makes A Complete Answer? A Study on Revision Histories of Stack Overflow Posts}
 \author{Zhao Gang\\
 Software Institute\\
 Nanjing University, Nanjing, China\\
@@ -16,9 +19,17 @@ gz120748@outlook.com
 \maketitle
 
 \section {Introduction}
-The largest Q\&A code forum, Stack Overflow, has helped tremendous programmers. Although currently there are many high quality answers on the site, not all of them are so helpful in the first place. A study has shown that over 20\% answers have been edited by either original authors or other users after it's been posted. \cite{7208aa781175403f9c3aaddc19f3b8cf} By taking such an collaborative approach, Stack Overflow succesfully improved its overall content quality with little cost. \cite{Chen:2017:CCD:3171581.3134667}
 
-After an answer gets posted, it can be either edited by the original author or other contributors from the community. Other contributors are further divided into two types: those who have over 2,000 reputation are labeled as trusted community members and can directly edit any answer, and those who have less reputation have to wait for a peer review process to get their edits accepted. \footnote{https://stackoverflow.com/help/editing} 
+\jyy{You may remove my comments when you read/addressed them.}
+
+The largest Q\&A code forum, Stack Overflow, has helped tremendous programmers.
+Although currently there are many high quality answers on the site, not all of them are so helpful in the first place.
+A study has shown that over 20\% answers have been edited by either original authors or other users after it's been posted \cite{7208aa781175403f9c3aaddc19f3b8cf}.
+By taking such an collaborative approach, Stack Overflow successfully improved its overall content quality with little cost \cite{Chen:2017:CCD:3171581.3134667}.
+\jyy{Start a new line in the \TeX{} source after a sentence to make \texttt{diff} easier to read.}
+
+After an answer gets posted, it can be either edited by the original author or other contributors from the community. Other contributors are further divided into two types: those who have over 2,000 reputation are labeled as trusted community members and can directly edit any answer, and those who have less reputation have to wait for a peer review process to get their edits accepted.%
+\footnote{\url{https://stackoverflow.com/help/editing}}
 
 \begin{figure}
   \includegraphics[width=\linewidth]{figure1.png}
@@ -26,7 +37,8 @@ After an answer gets posted, it can be either edited by the original author or o
   \label{fig:jqueryAnswer}
 \end{figure}
 
-Figure \ref{fig:jqueryAnswer} shows an example of an edited answer \footnote{https://stackoverflow.com/questions/3582619/how-to-change-css-display-none-or-block-property-using-jquery/3582629\#3582629}. The original author only provided one feasible and actually inferior solution, which is later complemented by a trusted community member. This example demonstrated a common scenario when an alternative API usage is added.
+Figure \ref{fig:jqueryAnswer} shows an example of an edited answer% 
+\footnote{\url{https://stackoverflow.com/questions/3582619/how-to-change-css-display-none-or-block-property-using-jquery/3582629#3582629}}. The original author only provided one feasible and actually inferior solution, which is later complemented by a trusted community member. This example demonstrated a common scenario when an alternative API usage is added.
 
 \begin{figure}
   \includegraphics[width=\linewidth]{figure2.png}
@@ -40,7 +52,13 @@ An answer could be edited due to various reasons, and there is an official list 
 
 To the best of our knowledge, no existing research investigates the completeness of answers on Stack Overflow. Such knowledge is useful because, for answerers it could help them compose a post that is more likely to get upvoted, and for editors it could provide them confidence for editing. Moreover, such knowledge can be used to detect incomplete yet accepted answers to call for improvement. All these implications can in turn improve the overall quality of this community and thus help its countless users.
 
-One may argue that an answer does not have to be complete, as long as the asker finds it helpful. However, Stack Overflow has been a primary learning resource for many programmers \footnote{https://insights.stackoverflow.com/survey/2018/\#technology}, and thus each answer can potentailly influence gazillions of programmers who may visit the same page with various background and problem contexts. Without the consideration of its vast audience, an answer can have horrifying ramification. For example, a tailored insecure code snippet without noticeable warning could be copied and used in hundreds of thousands of applications \cite{DBLP:conf/sp/FischerBXSA0F17}, raising big security concern. 
+\jyy{I think the word ``complete'' itself may need more explanations. Should a complete answer involve \emph{anything} needed to understand related issues? (E.g., the CSS display in the motivating example.). I feel that should be included is certainly subjective, and there is trade-off between brevity, the relevance to the question, etc. An overly complete answer maybe very difficult to read.}
+
+One may argue that an answer does not have to be complete, as long as the asker finds it helpful. However, Stack Overflow has been a primary learning resource for many programmers \footnote{https://insights.stackoverflow.com/survey/2018/\#technology}, and thus each answer can potentially influence gazillions of programmers who may visit the same page with various background and problem contexts. Without the consideration of its vast audience, an answer can have horrifying ramification. For example, a tailored insecure code snippet without noticeable warning could be copied and used in hundreds of thousands of applications \cite{DBLP:conf/sp/FischerBXSA0F17}, raising big security concern. 
+
+\jyy{From the argument, I can't imply that answers should be complete. Still, I'm convinced that there must be some fundamental issues to be addressed or clarified to make an answer good. Maybe we can focus on the research of revision history itself, and propose some interesting findings.}
+
+\jyy{Furthermore, we don't write the introduction part at this time because contents may subject to large changes. We found that a more effective approach is to write each paragraph's \emph{topic sentence} for now. This helps us thread the logic of the paper.}
 
 \section {Research questions}
 \begin{itemize}
@@ -48,6 +66,12 @@ One may argue that an answer does not have to be complete, as long as the asker 
   \item RQ2. How long does it take the community to fill each type of missing information?
   \item RQ3. Who is more likely to augment each type of information?
 \end{itemize}
+
+\jyy{It looks very good to decompose a StackOverflow answer into components (examples, links, references, patterns/antipatterns, ...). Is this idea new or someone already did the study? If not (or you're not satisfied with the related work), it worths a careful study as a research question: what may appear in an answer?}
+
+\jyy{Then, a (maybe large) quantitative analysis to the revision history can be conducted based on seeing what components are frequently added/revised in the revision history. This process is highly non-trivial and will support your later findings.}
+
+\jyy{Then many other questions can be answered with the previous results: who is likely to augment information, what makes an answer great, etc.}
 
 {\em Proposition1} 
 Alternative API usage, insertion to correct API misuse, links of references, links to learning resources, code example to demonstrate approachs, warning for when this solution may not apply, warning for non-functional issue of this solution, surrouding text or code comments explaining what the code does, and complete instructions on how to use the code may get added to an answer. Common missing types may be different within different question types, and the latter is previously conclude as 1) Looking for help with debugging, 2) Asking the capability of certain technology, 3) Eliciting implementation for a given task, and 4) Seeking alternative solution. \cite{DBLP:conf/icsm/NasehiSMB12}   
@@ -65,19 +89,22 @@ We can download Stack Overflow data dump \footnote{https://archive.org/download/
 
 \subsection {Definition of the Augmentation}
 In the above dataset, revision record is in the form of markdown-based or html-based full string. Inspired by a mining work from Baltes et al. \cite{DBLP:journals/corr/abs-1803-07311}, we define each element in markdown or HTML as a block. Additionally, we extract each line comment within a code block as an individual block. An edit may insert a new block or delete existing block (note we consider a update as an addition of one insertion and one deletion). We define an augmentation record as an edit only inserting new blocks. 
-
+\jyy{Study only augmentations may have threats. You may carefully think about it.}
 
 
 \subsection {Process}
-We only select posts with the tag of javascript as a representation. We believe posts revolving javascript is representative enough since javascript, as the most popular language both in terms of the post numbers within the community, has been used in many domains. We further filter the revision history dataset, only saving augmentation record.  
+We only select posts with the tag of javascript as a representation. We believe posts revolving javascript is representative enough since javascript, as the most popular language both in terms of the post numbers within the community, has been used in many domains. We further filter the revision history dataset, only saving augmentation record.
 
-Then, from the dataset, we first randomly sample 50 accpeted answers with augmentation record and over 100 upvotes, construct the initial missing types based on their records as well as our own experience.
+Then, from the dataset, we first randomly sample 50 accepted answers with augmentation record and over 100 upvotes, construct the initial missing types based on their records as well as our own experience.\jyy{We may have some further discussions on this.}
 
 After that, we randomly select 400 more accepted answers without upvoting constraint. We manually inspect their type and iteratively refine our model. After this process, we get a dataset of 400+ augmentation record each labelled with 1) corresponding missing types, 2) edited time, 3) answered time of the original answer, 4) accepted time of the answer, 5) question type, and 6) whether the editor is the original author, or a trusted contributor, or a novice.
 
 Then we can handily answer each of our research questions.
 
 \section {Related work}
+
+\jyy{I think you have already collected strongly-related work. If you have time, you can read them and find which relevant papers are cited by them. Generally we'd have 30-40 citations, and less relevant work can be just mentioned in our related work.}
+
 \subsection {Revisions on Stack Overflow}
 
 Li et al. \cite{JIT1397} trained a classfier to predict whether a post should be edited. They didn't qualitatively investigate the root cause of edits. (Note I can't get access to this paper and thus didn't actually read it)
@@ -106,7 +133,7 @@ Additionally, there may exist significant difference between answers for differe
 Moreover, we use average needed time to get complemented for each type of missing information to reflect scarcity of different knowledge in the community, but our sample is rather limited to be generalizable to the whole community. 
 
 
-
+\jyy{If a cited paper is published, you'd better cite the conference/journal version instead of the arxiv version. Please check if there're such cases.}
 
 \bibliographystyle{unsrt}
 \bibliography{references}
